# agent-sandbox

./: README.md
.trae/documents/: plan_20260103_134215.md
sandbox/: README.md
sandbox/evaluation/: README.md  agent_loop.py  main.py
sandbox/examples/: README.md  tools.py
sandbox/examples/langchain-agent/: .gitignore  README.md  main.py  pyproject.toml
sandbox/examples/langgraph-agent/: .env.example  README.md  main.py  pyproject.toml
sandbox/sdk/fern/: generators.yml
sandbox/sdk/js/: package.json
sandbox/sdk/js/src/api/resources/code/client/requests/: CodeExecuteRequest.ts
sandbox/sdk/js/src/api/resources/jupyter/client/requests/: JupyterCreateSessionRequest.ts  JupyterExecuteRequest.ts
sandbox/sdk/js/src/api/resources/nodejs/client/requests/: NodeJsExecuteRequest.ts  index.ts
sandbox/sdk/js/src/api/resources/shell/client/: Client.ts  index.ts
sandbox/sdk/js/src/api/resources/shell/client/requests/: ShellCreateSessionRequest.ts  ShellExecRequest.ts  ShellWaitRequest.ts  index.ts
sandbox/sdk/js/src/api/types/: ActionResponse.ts  CodeExecuteResponse.ts  NodeJsExecuteResponse.ts  NodeJsRuntimeInfo.ts  ShellKillResult.ts  index.ts
sandbox/sdk/python/: pyproject.toml
sandbox/sdk/python/agent_sandbox/: __init__.py
sandbox/sdk/python/agent_sandbox/types/: __init__.py
sandbox/website/docs/public/v1/: openapi.json
